prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/conflicts_with.nut
// EXPECT_ERROR: "conflicts with"
function foo() { return 1 }
local foo = 2
